modify category and reports tests